--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -484,6 +484,8 @@ header {
     .logo {
         @include font-size(40);
         @include sans-serif;
+        // Small screens less than 500px use the dj logo. This gives more
+        // horizontal space for a searchbar in the header
         background: url(../img/logo-dj.svg) center center no-repeat;
         color: var(--white-color);
         display: block;
@@ -505,8 +507,7 @@ header {
         }
 
         &:focus {
-            outline: 2px solid var(--white-color) !important;
-            outline-offset: 2px;
+            outline: 2px solid var(--menu);
         }
 
     }
@@ -1018,7 +1019,7 @@ footer {
             &:focus {
                 outline: 2px solid var(--body-fg);
             }
-
+            
         }
     }
 
